[gd_scene load_steps=10 format=2]

[ext_resource path="res://ressource/redrocketacad.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/Hud.gd" type="Script" id=2]
[ext_resource path="res://ressource/arrow_white.png" type="Texture" id=3]
[ext_resource path="res://ressource/pause_button.png" type="Texture" id=4]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0.854902, 0.0588235, 0.858824, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 1, 0.4, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "play",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "pause",
"speed": 5.0
} ]

[node name="Hud" type="CenterContainer"]
pause_mode = 2
rect_min_size = Vector2( 1024, 0 )
rect_scale = Vector2( 1, 0.9 )
theme = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 141.0
margin_right = 883.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoneBoutonP1" type="Control" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 50 )

[node name="HBoxContainerP1" type="HBoxContainer" parent="HBoxContainer/ZoneBoutonP1"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_p1mod_up" type="Button" parent="HBoxContainer/ZoneBoutonP1/HBoxContainerP1"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
text = "Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_p1mod_down" type="Button" parent="HBoxContainer/ZoneBoutonP1/HBoxContainerP1"]
margin_left = 34.0
margin_right = 82.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
text = "Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 84.0
margin_right = 284.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 0 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 288.0
margin_right = 448.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CenterContainer"]
margin_top = 11.0
margin_right = 160.0
margin_bottom = 39.0

[node name="score_P1" type="Label" parent="HBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 28.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 34.0
margin_top = 1.0
margin_right = 134.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 25 )
custom_fonts/font = SubResource( 2 )
text = "SCORE"
align = 1
valign = 1

[node name="score_P2" type="Label" parent="HBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 160.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoneBoutonPause" type="Control" parent="HBoxContainer"]
margin_left = 452.0
margin_right = 502.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="Button" type="Button" parent="HBoxContainer/ZoneBoutonPause"]
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 50 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/ZoneBoutonPause/Button"]
position = Vector2( 20.222, 25.7848 )
frames = SubResource( 5 )
animation = "play"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 506.0
margin_right = 658.0
margin_bottom = 50.0
rect_min_size = Vector2( 152, 0 )

[node name="ZoneBoutonP2" type="Control" parent="HBoxContainer"]
margin_left = 662.0
margin_right = 742.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ZoneBoutonP2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_p2mod_up" type="Button" parent="HBoxContainer/ZoneBoutonP2/HBoxContainer"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
text = "Up"

[node name="Button_p2mod_down" type="Button" parent="HBoxContainer/ZoneBoutonP2/HBoxContainer"]
margin_left = 34.0
margin_right = 82.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
text = "Down"
[connection signal="pressed" from="HBoxContainer/ZoneBoutonP1/HBoxContainerP1/Button_p1mod_up" to="." method="_on_Button_p1mod_up_pressed"]
[connection signal="pressed" from="HBoxContainer/ZoneBoutonP1/HBoxContainerP1/Button_p1mod_down" to="." method="_on_Button_p1mod_down_pressed"]
[connection signal="toggled" from="HBoxContainer/ZoneBoutonPause/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="HBoxContainer/ZoneBoutonP2/HBoxContainer/Button_p2mod_up" to="." method="_on_Button_p2mod_up_pressed"]
[connection signal="pressed" from="HBoxContainer/ZoneBoutonP2/HBoxContainer/Button_p2mod_down" to="." method="_on_Button_p2mod_down_pressed"]
